Parsing/tests_expression_statements/_test_build/_build/parser.automaton
State 0:
compilationUnit' -> . compilationUnit [ # ]
-- On error shift to state 1
-- On LCURL shift to state 2
-- On compilationUnit shift to state 449
-- On block shift to state 450

State 1:
compilationUnit -> error . [ # ]
-- On # reduce production compilationUnit -> error 

State 2:
block -> LCURL . localVariableDeclAndStmts RCURL [ # ]
block -> LCURL . RCURL [ # ]
-- On error shift to state 3
-- On WHILE shift to state 4
-- On VOID shift to state 6
-- On TRY shift to state 208
-- On THROW shift to state 210
-- On THIS shift to state 7
-- On SYNCHRONIZED shift to state 213
-- On SWITCH shift to state 217
-- On SUPER shift to state 8
-- On STRLIT shift to state 9
-- On SHORT shift to state 10
-- On SEMI shift to state 238
-- On RETURN shift to state 239
-- On RCURL shift to state 446
-- On PLUS shift to state 11
-- On NULLLIT shift to state 12
-- On NOT shift to state 13
-- On NEW shift to state 14
-- On MINUS shift to state 26
-- On LPAR shift to state 27
-- On LONG shift to state 15
-- On LCURL shift to state 243
-- On INTLIT shift to state 28
-- On INT shift to state 16
-- On INCREMENT shift to state 29
-- On IF shift to state 245
-- On IDENTIFIER shift to state 249
-- On FOR shift to state 251
-- On FLOATLIT shift to state 31
-- On FLOAT shift to state 18
-- On FINAL shift to state 254
-- On DOUBLELIT shift to state 32
-- On DOUBLE shift to state 19
-- On DO shift to state 274
-- On DECREMENT shift to state 33
-- On CONTINUE shift to state 387
-- On CHARLIT shift to state 34
-- On CHAR shift to state 20
-- On BYTE shift to state 21
-- On BREAK shift to state 391
-- On BOOLEANLIT shift to state 35
-- On BOOLEAN shift to state 22
-- On BNOT shift to state 36
-- On ASSERT shift to state 395
-- On unaryExpression shift to state 44
-- On typeSpecifier shift to state 422
-- On typeName shift to state 130
-- On statement shift to state 423
-- On specialName shift to state 38
-- On shiftExpression shift to state 58
-- On selectStmt shift to state 402
-- On relationalExpression shift to state 79
-- On realPostfixExpression shift to state 39
-- On qualifiedName shift to state 424
-- On primitiveType shift to state 425
-- On primaryExpression shift to state 64
-- On postfixExpression shift to state 65
-- On plainNewAllocationExpression shift to state 68
-- On notJustName shift to state 69
-- On newAllocationExpression shift to state 72
-- On multiplicativeExpression shift to state 73
-- On methodCall shift to state 75
-- On methodAccess shift to state 76
-- On logicalUnaryOperator shift to state 83
-- On logicalUnaryExpression shift to state 85
-- On localVariableDeclStmt shift to state 426
-- On localVariableDeclOrStmt shift to state 427
-- On localVariableDeclAndStmts shift to state 447
-- On labelStmt shift to state 403
-- On jumpStmt shift to state 404
-- On iterStmt shift to state 405
-- On inclusiveOrExpression shift to state 90
-- On guardingStmt shift to state 406
-- On fieldAccess shift to state 86
-- On expressionStmt shift to state 407
-- On expression shift to state 357
-- On exclusiveOrExpression shift to state 111
-- On equalityExpression shift to state 94
-- On emptyStmt shift to state 409
-- On conditionalOrExpression shift to state 112
-- On conditionalExpression shift to state 151
-- On conditionalAndExpression shift to state 117
-- On complexPrimaryNoParenthesis shift to state 87
-- On complexPrimary shift to state 88
-- On classAllocationExpression shift to state 100
-- On castExpression shift to state 103
-- On block shift to state 410
-- On assignmentExpression shift to state 152
-- On assertStmt shift to state 411
-- On arrayAllocationExpression shift to state 104
-- On arrayAccess shift to state 120
-- On arithmeticUnaryOperator shift to state 121
-- On andExpression shift to state 123
-- On additiveExpression shift to state 140

State 3:
expression -> error . [ SEMI RPAR RCURL RBRAC COMM COL ]
-- On SEMI reduce production expression -> error 
-- On RPAR reduce production expression -> error 
-- On RCURL reduce production expression -> error 
-- On RBRAC reduce production expression -> error 
-- On COMM reduce production expression -> error 
-- On COL reduce production expression -> error 

State 4:
iterStmt -> WHILE . LPAR expression RPAR statement [ error WHILE VOID TRY THROW THIS SYNCHRONIZED SWITCH SUPER STRLIT SHORT SEMI RETURN RCURL PLUS NULLLIT NOT NEW MINUS LPAR LONG LCURL INTLIT INT INCREMENT IF IDENTIFIER FOR FLOATLIT FLOAT FINAL ELSE DOUBLELIT DOUBLE DO DECREMENT CONTINUE CHARLIT CHAR BYTE BREAK BOOLEANLIT BOOLEAN BNOT ASSERT ]
-- On LPAR shift to state 5

State 5:
iterStmt -> WHILE LPAR . expression RPAR statement [ error WHILE VOID TRY THROW THIS SYNCHRONIZED SWITCH SUPER STRLIT SHORT SEMI RETURN RCURL PLUS NULLLIT NOT NEW MINUS LPAR LONG LCURL INTLIT INT INCREMENT IF IDENTIFIER FOR FLOATLIT FLOAT FINAL ELSE DOUBLELIT DOUBLE DO DECREMENT CONTINUE CHARLIT CHAR BYTE BREAK BOOLEANLIT BOOLEAN BNOT ASSERT ]
-- On error shift to state 3
-- On VOID shift to state 6
-- On THIS shift to state 7
-- On SUPER shift to state 8
-- On STRLIT shift to state 9
-- On SHORT shift to state 10
-- On PLUS shift to state 11
-- On NULLLIT shift to state 12
-- On NOT shift to state 13
-- On NEW shift to state 14
-- On MINUS shift to state 26
-- On LPAR shift to state 27
-- On LONG shift to state 15
-- On INTLIT shift to state 28
-- On INT shift to state 16
-- On INCREMENT shift to state 29
-- On IDENTIFIER shift to state 17
-- On FLOATLIT shift to state 31
-- On FLOAT shift to state 18
-- On DOUBLELIT shift to state 32
-- On DOUBLE shift to state 19
-- On DECREMENT shift to state 33
-- On CHARLIT shift to state 34
-- On CHAR shift to state 20
-- On BYTE shift to state 21
-- On BOOLEANLIT shift to state 35
-- On BOOLEAN shift to state 22
-- On BNOT shift to state 36
-- On unaryExpression shift to state 44
-- On specialName shift to state 38
-- On shiftExpression shift to state 58
-- On relationalExpression shift to state 79
-- On realPostfixExpression shift to state 39
-- On qualifiedName shift to state 42
-- On primitiveType shift to state 61
-- On primaryExpression shift to state 64
-- On postfixExpression shift to state 65
-- On plainNewAllocationExpression shift to state 68
-- On notJustName shift to state 69
-- On newAllocationExpression shift to state 72
-- On multiplicativeExpression shift to state 73
-- On methodCall shift to state 75
-- On methodAccess shift to state 76
-- On logicalUnaryOperator shift to state 83
-- On logicalUnaryExpression shift to state 85
-- On inclusiveOrExpression shift to state 90
-- On fieldAccess shift to state 86
-- On expression shift to state 206
-- On exclusiveOrExpression shift to state 111
-- On equalityExpression shift to state 94
-- On conditionalOrExpression shift to state 112
-- On conditionalExpression shift to state 151
-- On conditionalAndExpression shift to state 117
-- On complexPrimaryNoParenthesis shift to state 87
-- On complexPrimary shift to state 88
-- On classAllocationExpression shift to state 100
-- On castExpression shift to state 103
-- On assignmentExpression shift to state 152
-- On arrayAllocationExpression shift to state 104
-- On arrayAccess shift to state 120
-- On arithmeticUnaryOperator shift to state 121
-- On andExpression shift to state 123
-- On additiveExpression shift to state 140

State 6:
primitiveType -> VOID . [ XOR SEMI RPAR RCURL RBRAC QM OR NEQUAL LTHAN LPAR LETHAN LBRAC INSTANCEOF IDENTIFIER GTHAN GETHAN EQUAL DOT DIM COMM COL BOR BAND AND ]
-- On XOR reduce production primitiveType -> VOID 
-- On SEMI reduce production primitiveType -> VOID 
-- On RPAR reduce production primitiveType -> VOID 
-- On RCURL reduce production primitiveType -> VOID 
-- On RBRAC reduce production primitiveType -> VOID 
-- On QM reduce production primitiveType -> VOID 
-- On OR reduce production primitiveType -> VOID 
-- On NEQUAL reduce production primitiveType -> VOID 
-- On LTHAN reduce production primitiveType -> VOID 
-- On LPAR reduce production primitiveType -> VOID 
-- On LETHAN reduce production primitiveType -> VOID 
-- On LBRAC reduce production primitiveType -> VOID 
-- On INSTANCEOF reduce production primitiveType -> VOID 
-- On IDENTIFIER reduce production primitiveType -> VOID 
-- On GTHAN reduce production primitiveType -> VOID 
-- On GETHAN reduce production primitiveType -> VOID 
-- On EQUAL reduce production primitiveType -> VOID 
-- On DOT reduce production primitiveType -> VOID 
-- On DIM reduce production primitiveType -> VOID 
-- On COMM reduce production primitiveType -> VOID 
-- On COL reduce production primitiveType -> VOID 
-- On BOR reduce production primitiveType -> VOID 
-- On BAND reduce production primitiveType -> VOID 
-- On AND reduce production primitiveType -> VOID 

State 7:
specialName -> THIS . [ XOREQUAL XOR SEMI RSHIFTEQUAL RSHIFT RPAR RCURL RBRAC QM PLUS PEQUAL OREQUAL OR NEQUAL MULEQUAL MUL MODEQUAL MOD MINUSEQUAL MINUS LTHAN LSHIFTEQUAL LSHIFT LPAR LOGSHIFTEQUAL LOGSHIFT LETHAN INSTANCEOF INCREMENT GTHAN GETHAN EQUAL DOT DIVEQUAL DIV DECREMENT COMM COL BOR BAND ASSIGN ANDEQUAL AND ]
-- On XOREQUAL reduce production specialName -> THIS 
-- On XOR reduce production specialName -> THIS 
-- On SEMI reduce production specialName -> THIS 
-- On RSHIFTEQUAL reduce production specialName -> THIS 
-- On RSHIFT reduce production specialName -> THIS 
-- On RPAR reduce production specialName -> THIS 
-- On RCURL reduce production specialName -> THIS 
-- On RBRAC reduce production specialName -> THIS 
-- On QM reduce production specialName -> THIS 
-- On PLUS reduce production specialName -> THIS 
-- On PEQUAL reduce production specialName -> THIS 
-- On OREQUAL reduce production specialName -> THIS 
-- On OR reduce production specialName -> THIS 
-- On NEQUAL reduce production specialName -> THIS 
-- On MULEQUAL reduce production specialName -> THIS 
-- On MUL reduce production specialName -> THIS 
-- On MODEQUAL reduce production specialName -> THIS 
-- On MOD reduce production specialName -> THIS 
-- On MINUSEQUAL reduce production specialName -> THIS 
-- On MINUS reduce production specialName -> THIS 
-- On LTHAN reduce production specialName -> THIS 
-- On LSHIFTEQUAL reduce production specialName -> THIS 
-- On LSHIFT reduce production specialName -> THIS 
-- On LPAR reduce production specialName -> THIS 
-- On LOGSHIFTEQUAL reduce production specialName -> THIS 
-- On LOGSHIFT reduce production specialName -> THIS 
-- On LETHAN reduce production specialName -> THIS 
-- On INSTANCEOF reduce production specialName -> THIS 
-- On INCREMENT reduce production specialName -> THIS 
-- On GTHAN reduce production specialName -> THIS 
-- On GETHAN reduce production specialName -> THIS 
-- On EQUAL reduce production specialName -> THIS 
-- On DOT reduce production specialName -> THIS 
-- On DIVEQUAL reduce production specialName -> THIS 
-- On DIV reduce production specialName -> THIS 
-- On DECREMENT reduce production specialName -> THIS 
-- On COMM reduce production specialName -> THIS 
-- On COL reduce production specialName -> THIS 
-- On BOR reduce production specialName -> THIS 
-- On BAND reduce production specialName -> THIS 
-- On ASSIGN reduce production specialName -> THIS 
-- On ANDEQUAL reduce production specialName -> THIS 
-- On AND reduce production specialName -> THIS 

State 8:
specialName -> SUPER . [ XOREQUAL XOR SEMI RSHIFTEQUAL RSHIFT RPAR RCURL RBRAC QM PLUS PEQUAL OREQUAL OR NEQUAL MULEQUAL MUL MODEQUAL MOD MINUSEQUAL MINUS LTHAN LSHIFTEQUAL LSHIFT LPAR LOGSHIFTEQUAL LOGSHIFT LETHAN INSTANCEOF INCREMENT GTHAN GETHAN EQUAL DOT DIVEQUAL DIV DECREMENT COMM COL BOR BAND ASSIGN ANDEQUAL AND ]
-- On XOREQUAL reduce production specialName -> SUPER 
-- On XOR reduce production specialName -> SUPER 
-- On SEMI reduce production specialName -> SUPER 
-- On RSHIFTEQUAL reduce production specialName -> SUPER 
-- On RSHIFT reduce production specialName -> SUPER 
-- On RPAR reduce production specialName -> SUPER 
-- On RCURL reduce production specialName -> SUPER 
-- On RBRAC reduce production specialName -> SUPER 
-- On QM reduce production specialName -> SUPER 
-- On PLUS reduce production specialName -> SUPER 
-- On PEQUAL reduce production specialName -> SUPER 
-- On OREQUAL reduce production specialName -> SUPER 
-- On OR reduce production specialName -> SUPER 
-- On NEQUAL reduce production specialName -> SUPER 
-- On MULEQUAL reduce production specialName -> SUPER 
-- On MUL reduce production specialName -> SUPER 
-- On MODEQUAL reduce production specialName -> SUPER 
-- On MOD reduce production specialName -> SUPER 
-- On MINUSEQUAL reduce production specialName -> SUPER 
-- On MINUS reduce production specialName -> SUPER 
-- On LTHAN reduce production specialName -> SUPER 
-- On LSHIFTEQUAL reduce production specialName -> SUPER 
-- On LSHIFT reduce production specialName -> SUPER 
-- On LPAR reduce production specialName -> SUPER 
-- On LOGSHIFTEQUAL reduce production specialName -> SUPER 
-- On LOGSHIFT reduce production specialName -> SUPER 
-- On LETHAN reduce production specialName -> SUPER 
-- On INSTANCEOF reduce production specialName -> SUPER 
-- On INCREMENT reduce production specialName -> SUPER 
-- On GTHAN reduce production specialName -> SUPER 
-- On GETHAN reduce production specialName -> SUPER 
-- On EQUAL reduce production specialName -> SUPER 
-- On DOT reduce production specialName -> SUPER 
-- On DIVEQUAL reduce production specialName -> SUPER 
-- On DIV reduce production specialName -> SUPER 
-- On DECREMENT reduce production specialName -> SUPER 
-- On COMM reduce production specialName -> SUPER 
-- On COL reduce production specialName -> SUPER 
-- On BOR reduce production specialName -> SUPER 
-- On BAND reduce production specialName -> SUPER 
-- On ASSIGN reduce production specialName -> SUPER 
-- On ANDEQUAL reduce production specialName -> SUPER 
-- On AND reduce production specialName -> SUPER 
